Colocando mais um livro, colocando por onde entrar em contato, e alterando a cor de fundo do rodape

--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ button:hover {
 
 /* Rodapé */
 footer {
-  background-color: #222;
+  background-color: #350a0a;
   color: #fff;
   text-align: center;
   padding: 20px;
