--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ button:hover {
 
 /* Rodapé */
 footer {
-  background-color: #350a0a;
+  background-color: #1a1818;
   color: #fff;
   text-align: center;
   padding: 20px;
