--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ main {
 
 button {
   background-color: #ff4500;
-  color: #fff;
+  color: #2c2a2a;
   border: none;
   padding: 10px;
   margin-top: 10px;
